GH-PAGES - Update Firefox status.
Also include an additional bug report link.

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                             <a href="https://chrome.google.com/webstore/detail/psdle/jdjhhapoddhnimgdemnpbfagndcnmhii" style='display:block'><img src="logo/ChromeWebStore_Badge_v2_206x58.png" alt="Available in the Chrome Web Store" /></a><br>
                             <br>
                             <small>
-                                A Firefox extension is planned and currently being developed.<br>
+                                A Firefox extension was planned, but currently not being developed (due to SDK+AMO).<br>
                                 Have experience developing Firefox extensions? <a href="//github.com/RePod/psdle">Contact me!</a>
                             </small><br>
                             <br>
@@ -175,7 +175,8 @@
                     After successful activation the PSDLE logo will appear in the bottom-left corner, click it to start.<br>
                     <br>
                     <div style="text-align:center">
-                        Like PSDLE? Please <a href="#support">support it!</a>
+                        Like PSDLE? Please <a href="#support">support it!</a><br>
+                        Having problems or found a bug? <a href="//github.com/RePod/psdle/issues">Submit here!</a>
                     </div>
                 </div>
             </div>
