GH-PAGES - Red tape.*
*Actually blue.

--- a/index.html
+++ b/index.html
@@ -102,16 +102,18 @@
                             <dt>One convenient list of all your content!</dt>
                             <dt id='goto_view'><i class="fa fa-search fa-fw hidden-xs hidden-sm"></i> View, sort, and filter your download list as you desire!</dt>
                             <dt id='goto_vita'><i class="fa fa-search fa-fw hidden-xs hidden-sm"></i> Easily see Vita-supported content!</dt>
-                            <dt id='goto_pstv'><i class="fa fa-search fa-fw hidden-xs hidden-sm"></i> Determine what is compatible with PS TV! (en-us only)</dt>
+                                <dd>Even if you do not own a Vita!</dd>
+                            <dt id='goto_pstv'><i class="fa fa-search fa-fw hidden-xs hidden-sm"></i> Determine what is <abbr title="Subject to the web store's compatability list.">compatible with PS TV</abbr>! (en-us only)</dt>
                             <dt id='goto_plus_start'><i class="fa fa-search fa-fw hidden-xs hidden-sm"></i> PS+ Support</dt>
-                            <dd>See what is and isn't tied to your subscription.</dd>
-                            <dd>Requires active subscription.</dd>
+                                <dd>See what is and is not tied to your subscription.</dd>
+                                <dd>Requires active subscription.</dd>
                             <dt id='goto_newbox_start'><i class="fa fa-search fa-fw hidden-xs hidden-sm"></i> Download Queue support</dt>
-                            <dd>Easily send items where you want them to go.</dd>
+                                <dd>Easily send items where you want them to go.</dd>
                             <dt id='goto_export'><i class="fa fa-search fa-fw hidden-xs hidden-sm"></i> Export your list</dt>
-                            <dd>CSV format for spreadsheets.</dd>
+                                <dd>On your terms: <abbr title="Theoretically.">Infinite columns</abbr>, <abbr title="Or at least the ones that matter.">any property</abbr>.</dd>
+                                <dd>CSV format for spreadsheets.</dd>
                             <dt>Mobile</dt>
-                                <dd>Even on-the-go, don't settle for a featureless download list!</dd>
+                                <dd>Even on-the-go, do not settle for a featureless download list!</dd>
                             <dt>Lightweight, portable, consistent.</dt>
                                 <dd>Computer or mobile, always the same experience.</dd>
                             <dt>Open source!</dt>
@@ -194,7 +196,7 @@
                     <div id="paq_container" class="collapse">
                         <strong>Is PSDLE meant to compete with or replace the Download List?</strong><br>
                         It may appear to be a competitor or replacement due to its features. However, I see it as more of a supplement.<br><br>
-                        While the Download List may have shortcomings, I'm sure those who can officially provide a solution know and do not need to be reminded, told they "do not care", or told how their current product doesn't live up to PSDLE. Thank them for their awesome work instead, they do it for a living!<br><br>
+                        While the Download List may have shortcomings, I'm sure those who can officially provide a solution know and do not need to be reminded, told they "do not care", or told how their current product does not live up to PSDLE. Thank them for their awesome work instead, they do it for a living!<br><br>
                         The Download List is a great thing to have, PSDLE simply makes it better!
                         <br><br>
                         
