GH-PAGES - Thanks English.

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                             <dt id='goto_view'><i class="fa fa-search fa-fw hidden-xs hidden-sm"></i> View, sort, and filter your download list as you desire!</dt>
                             <dt id='goto_vita'><i class="fa fa-search fa-fw hidden-xs hidden-sm"></i> Easily see Vita-supported content!</dt>
                                 <dd>Even if you do not own a Vita!</dd>
-                            <dt id='goto_pstv'><i class="fa fa-search fa-fw hidden-xs hidden-sm"></i> Determine what is <abbr title="Subject to the web store's compatability list.">compatible with PS TV</abbr>! (en-us only)</dt>
+                            <dt id='goto_pstv'><i class="fa fa-search fa-fw hidden-xs hidden-sm"></i> Determine what is <abbr title="Subject to the web store's compatibility list.">compatible with PS TV</abbr>! (en-us only)</dt>
                             <dt id='goto_plus_start'><i class="fa fa-search fa-fw hidden-xs hidden-sm"></i> PS+ Support</dt>
                                 <dd>See what is and is not tied to your subscription.</dd>
                                 <dd>Requires active subscription.</dd>
@@ -208,6 +208,7 @@
                         
                         <strong>What all can I do with the search options?</strong><br>
                         <ul>
+                            <li>Search by name, ID, Publisher, and more.</li>
                             <li>Get auto-complete suggestions to find things faster.</li>
                             <li>Filter by system.</li>
                                 <ul><li>If Catalog is enabled, Classics inherit their original system (like PS1).</li></ul>
