--- a/index.html
+++ b/index.html
@@ -197,7 +197,10 @@
                         <strong>Is PSDLE meant to compete with or replace the Download List?</strong><br>
                         It may appear to be a competitor or replacement due to its features. However, I see it as more of a supplement.<br><br>
                         While the Download List may have shortcomings, I'm sure those who can officially provide a solution know and do not need to be reminded, told they "do not care", or told how their current product does not live up to PSDLE. Thank them for their awesome work instead, they do it for a living!<br><br>
-                        The Download List is a great thing to have, PSDLE simply makes it better!
+                        The Download List is a great thing to have, PSDLE simply makes it better!<br>
+                        <br>
+                        At the bare minimum, PSDLE intends to maintain parity with the download list and interact as expected with the PS4, PS3, and Vita first.<br>
+                        After that is done, pile on additional features (like powerful searching) to expedite those interactions.
                         <br><br>
                         
                         <strong>Where are all the cool features like PS1/PS2 games, categories, background screenshots, etc.?</strong><br>
