Genius naming conventions.
Thanks, Internet.

--- a/index.html
+++ b/index.html
@@ -178,7 +178,8 @@
                     <br>
                     <div style="text-align:center">
                         Like PSDLE? Please <a href="#support">support it!</a><br>
-                        Having problems or found a bug? <a href="//github.com/RePod/psdle/issues">Submit here!</a>
+                        Having problems or found a bug? <a href="//github.com/RePod/psdle/issues">Submit here!</a><br>
+                        PSDLE does not require Java, <a href="//wikipedia.org/wiki/JavaScript">Java is not Javascript!</a>
                     </div>
                 </div>
             </div>
