--- a/index.html
+++ b/index.html
@@ -302,6 +302,8 @@
                     </p>-->
                     <br>
                     <h4>PSDLE:</h4>
+                    <strong>Full disclosure:</strong> I (RePod) develop PSDLE for as a hobby for my needs first, and release it for the public's benefit to further improve it and continue the cycle. Those concerned, but not well versed, with "security" will receive little sympathy from me, use it as you see fit.<br>
+                    <br>
                     PSDLE is very powerful and provides a lot of functionality but requires various information, some of which may be personal.<br>
                     <br>
                     PSDLE accesses the following information when used:
@@ -313,12 +315,16 @@
                     </ul>
                     Remaining PSDLE functionality is user-selectable (e.g. Catalog) and does not require additional personal information from what has been listed above.<br>
                     <br>
-                    Information collected during PSDLE's runtime <strong>is not permanently stored by PSDLE, and never will be.</strong> This means anything generated or requested by PSDLE is gone in the e-wind after the resource it was attached to is terminated (e.g. tab). An exception to this is the Chrome extension which runs a background task to determine if the store is active or not.
-                    
+                    Information collected during PSDLE's runtime is not permanently stored by PSDLE, and never will be. This means anything generated or requested by PSDLE is gone in the e-wind after the resource it was attached to is terminated (e.g. tab). An exception to this is the Chrome extension which runs a background task to determine if the store is active or not.
                     If you would like to keep a permanent list please use the "Export View" function.<br>
                     <br>
-                    PSDLE <strong>does not transmit any information to an external location</strong>. All resources requested or sent (Queue) are in the executed page's context and domain, which is typically the store.
-                    Other products or services may interfere with, tamper with, modify, or intercept information PSDLE obtains. This should not be a concern as a majority of the information is publicly available in the page context, PSDLE just caches it.
+                    PSDLE does not transmit any information to an external location. All resources requested or sent (Queue) are in the executed page's context and domain, which is typically the store.
+                    Other products or services may interfere with, tamper with, modify, or intercept information PSDLE obtains. This should not be a concern as a majority of the information is publicly available in the page context, PSDLE just caches it.<br>
+                    <br>
+                    In short, make your own decisions on who and <abbr title="Salty closed-minded people.">who not</abbr> to trust. It's the Internet, after all!
+                    <br>
+                    This privacy policy is unique to PSDLE and is provided out of generosity as it is not required by any means.<br>
+                    PSDLE's privacy policy may change at any time for any reason.
                 </div>
             </div>
             <div class="row hidden-xs hidden-sm">
