--- a/index.html
+++ b/index.html
@@ -165,7 +165,8 @@
                             </ol>
                         </div>
                         <div id='method_extension' class="collapse text-center">
-                            <a href="https://chrome.google.com/webstore/detail/psdle/jdjhhapoddhnimgdemnpbfagndcnmhii" style='display:block'><img src="logo/ChromeWebStore_Badge_v2_206x58.png" alt="Available in the Chrome Web Store" /></a><br>
+                            <a href="https://chrome.google.com/webstore/detail/psdle/jdjhhapoddhnimgdemnpbfagndcnmhii" style='display:block'><img src="logo/ChromeWebStore_Badge_v2_206x58.png" alt="Available in the Chrome Web Store" /></a>
+                            <small>Reviews of all kinds are appreciated!</small><br>
                             <br>
                             <small>
                                 A Firefox extension was planned, but currently not being developed (due to SDK+AMO).<br>
