Lot of technology.

--- a/index.html
+++ b/index.html
@@ -204,8 +204,6 @@
                             <li><a href="#paq_pstv">Does this differentiate between Vita and PS/Vita TV games?</a></li>
                             <li><a href="#paq_eh">Is PSDLE meant to compete with or replace the Download List?</a></li>
                             <li><a href="#paq_mystery">What does PSDLE stand for?</a></li>
-                            <li><a href="#paq_share">Can I write an article about/share/print out and marry PSDLE?</a></li>
-                            <li><a href="#paq_desist">Am I free to copy, modify, redistribute, etc. PSDLE's source code?</a></li>
                         </ul>
                         <a class="anchor" id="paq1"></a><strong>Can I select which specific console I send items to for the download queue?</strong><br>
                         Seemingly no. It appears any number of consoles share the same download queue so it's based on whichever checks it first.
@@ -213,7 +211,8 @@
 
                         <a class="anchor" id="paq2"></a><strong>Sending items to the download queue is failing, despite working (minutes) before?</strong><br>
                         Your connection to the store most likely timed out, refreshing the page and running PSDLE again should solve this.<br>
-                        If the system is failing to start downloading, ensure you're signed in (or sign in again) or try rebooting it.
+                        If the system is failing to start downloading, ensure you're signed in (or sign in again) or try rebooting it.<br>
+                        If it's still not working, then <a href="//github.com/RePod/psdle/wiki/Submit-a-Bug-or-Translation">submit an issue.</a>
                         <br><br>
 
                         <a class="anchor" id="paq_catalog"></a><strong>Where are all the cool features like PS1/PS2 games, categories, background screenshots, etc.?</strong><br>
