Nothing to see here.
Didn't happen.

--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                     </p>-->
                     <br>
                     <h4>PSDLE:</h4>
-                    <strong>Full disclosure:</strong> I (RePod) develop PSDLE for as a hobby for my needs first, and release it for the public's benefit to further improve it and continue the cycle. Those concerned, but not well versed, with "security" will receive little sympathy from me, use it as you see fit.<br>
+                    <strong>Full disclosure:</strong> I (RePod) develop PSDLE as a hobby for myself first, and release it for the public's benefit to further improve it and continue the cycle. Those concerned, but not well versed, with "security" will receive little sympathy from me, use it as you see fit.<br>
                     <br>
                     PSDLE is very powerful and provides a lot of functionality but requires various information, some of which may be personal.<br>
                     <br>
