GH-PAGES - Note it up.*
* Footnotes.

--- a/index.html
+++ b/index.html
@@ -132,6 +132,10 @@
                     </div><br>
                     <div id="method_holder" class="accordion-group">
                         <div id='method_direct' class="collapse in">
+                            <div class="label label-primary method_info">
+                                <!-- <i class="fa fa-info fa-fw" style="float:left;"></i> -->
+                                Most reliable method, the ultimate last resort.<br>
+                            </div>
                             <ol>
                                 <li>Copy the following to your clipboard:</li>
                                 <!--<kbd>javascript:$.getScript("//repod.github.io/psdle/psdle.js");void(0);</kbd><br><br>-->
@@ -163,6 +167,7 @@
                                 <li>Select the bookmark from your bookmarks.</li>
                                 <li>PSDLE should activate.</li>
                             </ol>
+                            <small>Some browsers (like Android Chrome) may refuse to execute this from bookmarks. If this is the case, copypasting the bookmark's URL into the address bar manually and prepending <strong>javascript:</strong> should also work, similar to the Direct method.</small><br><br>
                         </div>
                         <div id='method_extension' class="collapse text-center">
                             <a href="https://chrome.google.com/webstore/detail/psdle/jdjhhapoddhnimgdemnpbfagndcnmhii" style='display:block'><img src="logo/ChromeWebStore_Badge_v2_206x58.png" alt="Available in the Chrome Web Store" /></a>
