GH-PAGES - Improve suggested methods.
Basically a huge if/not Chrome and if/not mobile.
Mobile Chrome users don't need to be suggested the desktop extension,
and they can't use the bookmarklet.

Unfortunately by not suggesting the bookmarklet, mobile users don't get
30kb in savings from using the min version.

--- a/index.html
+++ b/index.html
@@ -133,8 +133,7 @@
                     <div id="method_holder" class="accordion-group">
                         <div id='method_direct' class="collapse in">
                             <div class="label label-primary method_info">
-                                <!-- <i class="fa fa-info fa-fw" style="float:left;"></i> -->
-                                Most reliable method, the ultimate last resort.<br>
+                                Most reliable method, the ultimate last resort.
                             </div>
                             <ol>
                                 <li>Copy the following to your clipboard:</li>
@@ -158,7 +157,7 @@
                         <div id='method_bookmarklet' class="collapse">
                             <div class="label label-primary method_info">
                                 <!-- <i class="fa fa-info fa-fw" style="float:left;"></i> -->
-                                This method requests the file from this site (hosted by GitHub) when used.<br>
+                                This method requests the file from this site (hosted by GitHub) when used.
                             </div>
                             <i class="fa fa-mobile"></i> Recommended for mobile and tablets.
                             <ol>
@@ -170,6 +169,9 @@
                             <small>Some browsers (like Android Chrome) may refuse to execute this from bookmarks. If this is the case, copypasting the bookmark's URL into the address bar manually and prepending <strong>javascript:</strong> should also work, similar to the Direct method.</small><br><br>
                         </div>
                         <div id='method_extension' class="collapse text-center">
+                            <div class="label label-primary method_info">
+                                Unless otherwise noted, the following are for desktop browsers.
+                            </div>
                             <a href="https://chrome.google.com/webstore/detail/psdle/jdjhhapoddhnimgdemnpbfagndcnmhii" style='display:block'><img src="logo/ChromeWebStore_Badge_v2_206x58.png" alt="Available in the Chrome Web Store" /></a>
                             <small>Reviews of all kinds are appreciated!</small><br>
                             <br>
