GH-PAGES - Perfect?
Step two.

Now swaps out the Direct's URL to .min if supposedly on mobile.
Best of both worlds:
- Using .min previously on Bookmarklet
- Not suggesting Bookmarklet when it's flaky on mobile

--- a/index.html
+++ b/index.html
@@ -138,7 +138,9 @@
                             <ol>
                                 <li>Copy the following to your clipboard:</li>
                                 <!--<kbd>javascript:$.getScript("//repod.github.io/psdle/psdle.js");void(0);</kbd><br><br>-->
-                                <span id='inline_code' class="panel panel-default"><span class="panel-body notranslate" style="word-break:break-all" translate="no">javascript:$.getScript("//repod.github.io/psdle/psdle.js");void(0);</span></span>
+                                <span id='inline_code' class="panel panel-default">
+                                    <span id='psdle_bit' class="panel-body notranslate" style="word-break:break-all" translate="no">javascript:$.getScript("//repod.github.io/psdle/psdle.js");void(0);</span>
+                                </span>
                                 <li>Navigate to the the online store.</li>
                                 <li>Paste into your browser's address bar.</li>
                                 <li>Ensure the pasted line begins with <strong class="notranslate" translate="no">javascript:</strong> If not, add it.</li>
