GH-PAGES - Long time coming.
Should have had this from the start.

--- a/index.html
+++ b/index.html
@@ -142,8 +142,9 @@
                                     <span id='psdle_bit' class="panel-body notranslate" style="word-break:break-all" translate="no">javascript:$.getScript("//repod.github.io/psdle/psdle.js");void(0);</span>
                                 </span>
                                 <li>Navigate to the the online store.</li>
-                                <li>Paste into your browser's address bar.</li>
+                                <li>Paste into your browser's address bar, removing the previous text.</li>
                                 <li>Ensure the pasted line begins with <strong class="notranslate" translate="no">javascript:</strong> If not, add it.</li>
+                                <ul><li><a href='example.jpg'>Click here for an example.</a></li></ul>
                                 <li>Submit.</li>
                                 <li>PSDLE should activate.</li>
                             </ol>
