--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                                 <li>Navigate to the the online store.</li>
                                 <li>Paste into your browser's address bar, removing the previous text.</li>
                                 <li>Ensure the pasted line begins with <strong class="notranslate" translate="no">javascript:</strong> If not, add it.</li>
-                                <ul><li><a href='example.jpg'>Click here for an example.</a></li></ul>
+                                <ul><li><a href='example.jpg' target="_blank">Click here for an example.</a></li></ul>
                                 <li>Submit.</li>
                                 <li>PSDLE should activate.</li>
                             </ol>
