GH-PAGES - Update FontAwesome and contact list.
It's also actually a list now.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <!-- CSS -->
         <link rel="stylesheet" href="bootstrap-3.3.2-dist/css/bootstrap.min.css" />
-        <link rel="stylesheet" href="font-awesome-4.2.0/css/font-awesome.min.css" />
+        <link rel="stylesheet" href="font-awesome-4.6.3/css/font-awesome.min.css" />
         <link rel="stylesheet" href="bootstrap.css" />
         <link rel="stylesheet" href="psdle_carousel.css" />
 
@@ -289,11 +289,13 @@
                     <div class="page-header">
                         <h3 id="support"><i class="fa fa-thumbs-up fa-fw"></i> Support PSDLE</h3>
                     </div>
-                    PSN codes are nice and preferred, <strong>EN-US</strong> only please.<br>
+                    PSN codes are preferred and appreciated (<a href="//www.amazon.com/dp/B00GAC1D2G"><i class='fa fa-link fa-fw'></i> Amazon US</a>), <strong>EN-US</strong> only please.<br>
                     <br>
-                    E-mails and inquiries can be sent to <a href="mailto:repod.psdle@gmail.com" style='font-style:oblique;'><i class='fa fa-mail-forward fa-fw'></i> repod.psdle@gmail.com</a>.<br>
-                    <br>
-                    <a href="//www.amazon.com/dp/B00GAC1D2G"><i class='fa fa-link fa-fw'></i> Amazon (US)</a>
+                    I may be contacted directly at (for support, feedback, or otherwise):
+                    <ul>
+                        <li><a href='https://www.reddit.com/message/compose?to=RePod37&amp;subject=PSDLE' style='font-style:oblique;'><i class='fa fa-reddit-alien fa-fw'></i> @RePod37</a></li>
+                        <li><a href="mailto:repod.psdle@gmail.com" style='font-style:oblique;'><i class='fa fa-envelope fa-fw'></i> repod.psdle@gmail.com</a>.</li>
+                    </ul>
                 </div>
             </div>
             <div class="row">
