GH-PAGES - Too good looking to pass up.
I bet Font Awesome has a way to do this natively.

--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
                             <div class="label label-primary method_info">
                                 For advanced users and conspiracy theorists only!
                             </div>
-                            <a href="//github.com/RePod/psdle/"><button class='btn btn-primary'><i class='fa fa-fw fa-github'></i> View source on GitHub!</button></a>
-                            <a href="//github.com/RePod/psdle/wiki"><button class='btn btn-primary'><i class='fa fa-fw fa-book'></i> Read the wiki for development notes!</button></a>
+                            <a href="//github.com/RePod/psdle/"><button class='btn btn-primary fancy'><i class='fa fa-github fa-4x fancy'></i> View source on GitHub!</button></a>
+                            <a href="//github.com/RePod/psdle/wiki"><button class='btn btn-primary fancy'><i class='fa fa-book fa-4x fancy'></i> Read the wiki for development notes!</button></a>
                         </div>
                     </div>
                     <br>
