GH-PAGES - Reflect shift-click feature.

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                             <div style='background-image:url("//i.imgur.com/ABVwIJA.jpg")'><div class='cell-info bottomfull'>Hide all PS+ content!</div></div>
                             <div id='newbox_start' style='background-image:url("//i.imgur.com/avzkd2S.jpg")'><div class='cell-info bottomfull'>Check out extended details and higher quality artwork in the info panel...</div></div>
                             <div style='background-image:url("//i.imgur.com/cTBEcS7.jpg")'><div class='cell-info bottomfull'>...and send content to the Download Queue!</div></div>
+                            <div id='queue_fast' style='background-image:url("//i.imgur.com/8iLwSsn.jpg")'><div class='cell-info bottomfull'>Shift-click rows to instantly add to or remove from the Download Queue!</div></div>
                             <div id='export' style='background-image:url("//i.imgur.com/SSxMHhq.jpg")'><div class='cell-info bottomfull'>Export what you see in a CSV format!</div></div>
                         </div>
                     </div>
@@ -109,6 +110,7 @@
                                 <dd>Requires active subscription.</dd>
                             <dt id='goto_newbox_start'><i class="fa fa-search fa-fw hidden-xs hidden-sm"></i> Download Queue support</dt>
                                 <dd>Easily send items where you want them to go.</dd>
+                                <dd id='goto_queue_fast'><i class="fa fa-search fa-fw hidden-xs hidden-sm"></i> Pick up the pace with keyboard shortcuts!</dd>
                             <dt id='goto_export'><i class="fa fa-search fa-fw hidden-xs hidden-sm"></i> Export your list</dt>
                                 <dd>On your terms: <abbr title="Theoretically.">Infinite columns</abbr>, <abbr title="Or at least the ones that matter.">any property</abbr>.</dd>
                                 <dd>CSV format for spreadsheets.</dd>
