GH-PAGES - Nobody saw it.
The copypaste is real.

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                                 <span id='inline_code' class="panel panel-default">
                                     <span id='psdle_bit' class="panel-body notranslate" style="word-break:break-all" translate="no">javascript:$.getScript("//repod.github.io/psdle/psdle.js");void(0);</span>
                                 </span>
-                                <li>Navigate to the the online store.</li>
+                                <li>Navigate to the online store.</li>
                                 <li>Paste into your browser's address bar, removing the previous text.</li>
                                 <li>Ensure the pasted line begins with <strong class="notranslate" translate="no">javascript:</strong> If not, add it.</li>
                                 <ul><li><a href='example.jpg' target="_blank">Click here for an example.</a></li></ul>
@@ -156,7 +156,7 @@
                             <ol>
                                 <li>Install <a class="" href="https://addons.mozilla.org/en-US/firefox/addon/greasemonkey/" target="_blank">Greasemonkey</a> <small>(Firefox)</small>, <a class="" href="https://chrome.google.com/webstore/detail/tampermonkey/dhdgffkkebhmkfjojejmpbldmpobfkfo?hl=en" target="_blank">Tampermonkey</a> <small>(Chrome)</small>, or equivalent.</li>
                                 <li>Install the <a id="inline_userscript" href="psdle.user.js">PSDLE userscript</a>.</li>
-                                <li>Navigate to the the online store.</li>
+                                <li>Navigate to the online store.</li>
                                 <li>PSDLE should activate automatically.</li>
                             </ol>
                         </div>
@@ -167,7 +167,7 @@
                             </div>
                             <ol>
                                 <li>Bookmark this link: <a id="inline_bookmarklet" href="javascript:$.getScript('//repod.github.io/psdle/psdle.min.js');void(0);"><button class='btn btn-primary btn-xs'>Run PSDLE</button></a>
-                                <li>Navigate to the the online store.</li>
+                                <li>Navigate to the online store.</li>
                                 <li>Select the bookmark from your bookmarks.</li>
                                 <li>PSDLE should activate.</li>
                             </ol>
