--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                         <li>How you reached this website <small>(another website, a search engine, etc.)</small></li>
                         <li>General browser and OS information <small>(Chrome/Firefox, Windows/OSX, screen resolution, mobile device, etc.)</small></li>
                         <li>How you interact with this site <small>(Such as expanding the P.A.Q.)</small></li>
-                        <li>And a lot more. For more information, please read <a href="support.google.com/analytics/topic/2919631">Google's documentation about Analytics</a>.</li>
+                        <li>And a lot more. For more information, please read <a href="//support.google.com/analytics/topic/2919631">Google's documentation about Analytics</a>.</li>
                     </ul>
                     To repeat, all information collected through Google Analytics is non-identifiable, or <strong>anonymous</strong>.<br><br>
                     <strong>How and why I use the data collected:</strong>
