Current year, new me.

--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                 <a href='//github.com/RePod'><i class="fa fa-plus fa-fw"></i> More</a><br>
             </span><br><br>
             <span class='text'>
-                PSDLE is not sponsored, endorsed, or created by Sony, SNEI, SCEA, SCEE, SCEI, or affiliates.<br>
+                PSDLE is not sponsored, endorsed, or created by Sony, SNEI, SCEA, SCEE, SCEI, PlayStation, or affiliates.<br>
                 Third-party content (icons, names) re-rendered by PSDLE is provided from the Entitlements API.<br>
                 Screenshots are for educational and informative purposes and are not hosted on this domain.<br>
                 <br>
