Small PSA and minor CSS improvement

--- a/index.html
+++ b/index.html
@@ -299,13 +299,14 @@
                     <div class="page-header">
                         <h3 id="support"><i class="fa fa-thumbs-up fa-fw"></i> Support PSDLE</h3>
                     </div>
-                    PSN codes are preferred and appreciated (<a href="//www.amazon.com/dp/B00GAC1D2G"><i class='fa fa-link fa-fw'></i> Amazon US</a>), <strong>EN-US</strong> only please.<br>
+                    <strong>Messages asking for support for programs/utilities other than PSDLE will be ignored.</strong><br>
                     <br>
                     I may be contacted directly at (for support, feedback, or otherwise):
                     <ul>
                         <li><a href='https://www.reddit.com/message/compose?to=RePod37&amp;subject=PSDLE' style='font-style:oblique;'><i class='fa fa-reddit-alien fa-fw'></i> @RePod37</a></li>
                         <li><a href="mailto:repod.psdle@gmail.com" style='font-style:oblique;'><i class='fa fa-envelope fa-fw'></i> repod.psdle@gmail.com</a>.</li>
                     </ul>
+                    PSN codes are preferred and appreciated (<a href="//www.amazon.com/dp/B00GAC1D2G"><i class='fa fa-link fa-fw'></i> Amazon US</a>), <strong>EN-US</strong> only please.
                 </div>
             </div>
             <div class="row">
