Remove language thing.

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                         </div>
                         <div id='method_userscript' class="collapse">
                             <ol>
-                                <li>Install <a href="https://addons.mozilla.org/en-US/firefox/addon/greasemonkey/" target="_blank">Greasemonkey</a> <small>(<i class="fa fa-firefox"></i> Firefox)</small>, <a href="https://chrome.google.com/webstore/detail/tampermonkey/dhdgffkkebhmkfjojejmpbldmpobfkfo?hl=en" target="_blank">Tampermonkey</a> <small>(<i class="fa fa-chrome"></i> Chrome)</small>, or equivalent.</li>
+                                <li>Install <a href="https://addons.mozilla.org/en-US/firefox/addon/greasemonkey/" target="_blank">Greasemonkey</a> <small>(<i class="fa fa-firefox"></i> Firefox)</small>, <a href="https://chrome.google.com/webstore/detail/tampermonkey/dhdgffkkebhmkfjojejmpbldmpobfkfo" target="_blank">Tampermonkey</a> <small>(<i class="fa fa-chrome"></i> Chrome)</small>, or equivalent.</li>
                                 <li>Install the <a id="inline_userscript" href="psdle.user.js">PSDLE userscript</a>.</li>
                                 <li>Navigate to the online store.</li>
                                 <li>PSDLE should activate automatically.</li>
