Swap PSN for Steam

--- a/index.html
+++ b/index.html
@@ -306,7 +306,9 @@
                         <li><a href='https://www.reddit.com/message/compose?to=RePod37&amp;subject=PSDLE' style='font-style:oblique;'><i class='fa fa-reddit-alien fa-fw'></i> @RePod37</a></li>
                         <li><a href="mailto:repod.psdle@gmail.com" style='font-style:oblique;'><i class='fa fa-envelope fa-fw'></i> repod.psdle@gmail.com</a>.</li>
                     </ul>
-                    PSN codes are preferred and appreciated (<a href="//www.amazon.com/dp/B00GAC1D2G"><i class='fa fa-link fa-fw'></i> Amazon US</a>), <strong>EN-US</strong> only please.
+                    If you would like to buy me a beer drinking simulator, I accept Steam currency!<br>
+                    Either e-mail me a <a href="https://support.steampowered.com/kb_article.php?ref=1193-WLXV-6514"><i class='fa fa-link fa-fw'></i>wallet code</a> or <a href="https://store.steampowered.com/digitalgiftcards/selectgiftcard"><i class='fa fa-link fa-fw'></i>requesting to be added as a friend to gift through Steam</a>.<br>
+                    No worries! Despite accepting Steam currency, PSDLE will still receive updates.
                 </div>
             </div>
             <div class="row">
